--- a/src/app/backgrounds/backgrounds.css
+++ b/src/app/backgrounds/backgrounds.css
@@ -1,12 +1,26 @@
 /* Backgrounds.css - Efeitos de Fundo Futurísticos */
 
+
+/* backgrounds.css */
+
+.theme-background-overlay {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  pointer-events: none;
+  transition: background 0.5s ease;
+}
+
+
 /* Modo Default */
 .theme-default .background-overlay {
   background: center/cover no-repeat, linear-gradient(135deg, #0f0c29, #000000, #24243e);
   color: #ffffff;
   animation: neon-glow 5s infinite alternate;
   transition: background 0.5s ease;
-  opacity: 3.8;
+  opacity: 0.8;
 }
 
 /* Modo Neon Futurístico */
@@ -54,18 +68,6 @@
   animation: particle-glow 20s linear infinite;
   pointer-events: none;
   z-index: -1;
-}
-
-/* Transição suave entre modos dark mode */
-.theme-background-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  pointer-events: none;
-  transition: background 0.5s ease;
 }
 
 
@@ -639,31 +641,3 @@
   border: 1px solid var(--theme-accent);
 }
 
-
-/* Exemplo: styles/globals.css */
-.input-date {
-  -webkit-appearance: none;
-  -moz-appearance: textfield;
-  background-color: #00a8ff; /* Cor neon verde */
-  border-radius: 10px;
-}
-
-.input-date-custom {
-  background-image: url("/media/photos/calendario_a.png"); /* seu .png */
-  background-repeat: no-repeat;
-  background-position: right 2rem center;
-  background-size: 40px;
-  color-scheme: dark;
-  padding-right: 1.5rem; /* espaço pro ícone */
-}
-
-/* Deixe o ícone do calendário branco */
-.calendar-white-icon::-webkit-calendar-picker-indicator {
-  filter: invert(1);
-  background-color: #00ff00;
-}
-
-.calendar-white-icon::-moz-calendar-picker-indicator {
-  filter: invert(1);
-  background-color: #00ff00;
-}
